<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".RockGroupActivity">



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/olober_sykes" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="Oliver Sykes"
            android:textSize="18dp" />
    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding"
        android:text="@string/faculty_txt"
        android:textSize="@dimen/default_text_size" />

    <EditText
        android:id="@+id/facultyEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/grp_number_txt"
                android:textSize="@dimen/default_text_size"/>
            <EditText
                android:id="@+id/grpNumberEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ems="10"
                android:inputType="textPersonName"/>

            </LinearLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">
            <TextView android:text="@string/edu_level_txt"/>
            <RadioGroup>
                <RadioButton
                    android:id="@+id/edu_level_bachelor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edu_level_bachelor_txt"/>
                <RadioButton
                    android:id="@+id/edu_level_master"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edu_level_master_txt"/>
            </RadioGroup>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView android:text="@string/additional_flg_txt"/>
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/contract_flg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contract_flg_txt" />

            <CheckBox
                android:id="@+id/privilege_flg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privilege_flg_txt" />

        </LinearLayout>
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/default_padding"
        android:onClick="onOkBtnClick"
        android:text="@string/btn_ok_txt"
        android:textSize="@dimen/default_text_size" />
</LinearLayout>